# test_minhash_orderhash

./: CMakeLists.txt
include/: BBHashMap.h  OrderHashReadFilter.h  ReadFilter.h  Test_Orderminhash.h  Test_minhash.h
src/: Minhash_ReadFilter.cpp  OrderHashReadFilter.cpp  ReadData.cpp  main.cpp
